--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,18 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+# React 관련
+/node_modules
+/.pnp
+.pnp.js
+/build
+/coverage
+
+# Spring Boot 관련
+/.env
+/.env.local
+/.env.development
+/.env.test
+/.env.production
+/target
+*.log
