--- a/backend/thescreen/src/main/resources/application.properties
+++ b/backend/thescreen/src/main/resources/application.properties
@@ -7,13 +7,25 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # JPA
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.defer-datasource-initialization=true
 
+# 로깅 설정 (깔끔한 출력)
+logging.level.com.example.thescreen=INFO
+logging.level.com.example.thescreen.service.ScheduleInitService=INFO
+logging.level.com.example.thescreen.service.MovieRankService=INFO
+logging.level.org.springframework.web=WARN
+logging.level.org.hibernate=WARN
+logging.level.org.springframework.jdbc.datasource.init=INFO
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# SQL 초기화 설정 개선
 spring.sql.init.mode=always
+spring.sql.init.continue-on-error=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.sql.init.schema-locations=classpath:schema.sql
 spring.sql.init.data-locations=classpath:data.sql
 
